--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org">
   <head th:fragment="head">
     <meta charset="utf-8" />
     <title>KOPPEE - Coffee Shop HTML Template</title>
@@ -8,33 +10,33 @@
     <meta content="Free Website Template" name="description" />
 
     <!-- Favicon -->
-    <link href="/img/favicon.ico" rel="icon" />
+    <link th:href="@{/img/favicon.ico}" rel="icon" />
 
     <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&family=Roboto:wght@400;500;700&display=swap"
+      th:href="@{https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&family=Roboto:wght@400;500;700&display=swap}"
       rel="stylesheet"
     />
 
     <!-- Font Awesome -->
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+      th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css}"
       rel="stylesheet"
     />
 
     <!-- Libraries Stylesheet -->
     <link
-      href="/lib/owlcarousel/assets/owl.carousel.min.css"
+      th:href="@{/lib/owlcarousel/assets/owl.carousel.min.css}"
       rel="stylesheet"
     />
     <link
-      href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css"
+      th:href="@{/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css}"
       rel="stylesheet"
     />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/style.min.css" rel="stylesheet" />
+    <link th:href="@{/css/style.min.css}" rel="stylesheet" />
   </head>
 
   <body>
@@ -53,7 +55,7 @@
       "
     >
       <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
-        <a href="/" class="navbar-brand px-lg-4 m-0">
+        <a th:href="@{/}" class="navbar-brand px-lg-4 m-0">
           <h1 class="m-0 display-4 text-uppercase text-white">KOPPEE</h1>
         </a>
         <button
@@ -69,14 +71,14 @@
           id="navbarCollapse"
         >
           <div class="navbar-nav ml-auto p-4">
-            <a href="/" th:class="'nav-item nav-link ' + ${home}">Home</a>
-            <a href="/about" th:class="'nav-item nav-link ' + ${about}"
+            <a th:href="@{/}" th:class="'nav-item nav-link ' + ${home}">Home</a>
+            <a th:href="@{/about}" th:class="'nav-item nav-link ' + ${about}"
               >About</a
             >
-            <a href="/service" th:class="'nav-item nav-link ' + ${service}"
+            <a th:href="@{/service}" th:class="'nav-item nav-link ' + ${service}"
               >Service</a
             >
-            <a href="/menu" th:class="'nav-item nav-link ' + ${menu}">Menu</a>
+            <a th:href="@{/menu}" th:class="'nav-item nav-link ' + ${menu}">Menu</a>
             <div class="nav-item dropdown">
               <a
                 href="#"
@@ -86,18 +88,18 @@
               >
               <div class="dropdown-menu text-capitalize">
                 <a
-                  href="/reservation"
+                  th:href="@{/reservation}"
                   th:class="'dropdown-item ' + ${reservation}"
                   >Reservation</a
                 >
                 <a
-                  href="/testimonial"
+                  th:href="@{/testimonial}"
                   th:class="'dropdown-item ' + ${testimonial}"
                   >Testimonial</a
                 >
               </div>
             </div>
-            <a href="/contact" th:class="'nav-item nav-link ' + ${contact}"
+            <a th:href="@{/contact}" th:class="'nav-item nav-link ' + ${contact}"
               >Contact</a
             >
           </div>
@@ -164,7 +166,7 @@
         </div>
         <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
             <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Domain</a>. All Rights Reserved.</a></p>
-            <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p>
+            <p class="m-0 text-white">Designed by <a class="font-weight-bold" th:href="@{https://htmlcodex.com}">HTML Codex</a></p>
         </div>
     </div>
     <!-- Footer End -->
@@ -271,21 +273,21 @@
       ></a>
 
       <!-- JavaScript Libraries -->
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-      <script src="/lib//easing/easing.min.js"></script>
-      <script src="/lib//waypoints/waypoints.min.js"></script>
-      <script src="/lib//owlcarousel/owl.carousel.min.js"></script>
-      <script src="/lib//tempusdominus/js/moment.min.js"></script>
-      <script src="/lib//tempusdominus/js/moment-timezone.min.js"></script>
-      <script src="/lib//tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+      <script th:src="@{https://code.jquery.com/jquery-3.4.1.min.js}"></script>
+      <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js}"></script>
+      <script th:src="@{/lib//easing/easing.min.js}"></script>
+      <script th:src="@{/lib//waypoints/waypoints.min.js}"></script>
+      <script th:src="@{/lib//owlcarousel/owl.carousel.min.js}"></script>
+      <script th:src="@{/lib//tempusdominus/js/moment.min.js}"></script>
+      <script th:src="@{/lib//tempusdominus/js/moment-timezone.min.js}"></script>
+      <script th:src="@{/lib//tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
 
       <!-- Contact Javascript File -->
-      <script src="/mail/jqBootstrapValidation.min.js"></script>
-      <script src="/mail/contact.js"></script>
+      <script th:src="@{/mail/jqBootstrapValidation.min.js}"></script>
+      <script th:src="@{/mail/contact.js}"></script>
 
       <!-- Template Javascript -->
-      <script src="/js/main.js"></script>
+      <script th:src="@{/js/main.js}"></script>
     </div>
   </body>
 </html>
