--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
     >
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="w-100" src="/img/carousel-1.jpg" alt="Image"/>
+                <img class="w-100" th:src="@{/img/carousel-1.jpg}" alt="Image"/>
                 <div
                         class="carousel-caption d-flex flex-column align-items-center justify-content-center"
                 >
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="/img/carousel-2.jpg" alt="Image"/>
+                <img class="w-100" th:src="@{/img/carousel-2.jpg}" alt="Image"/>
                 <div
                         class="carousel-caption d-flex flex-column align-items-center justify-content-center"
                 >
@@ -90,7 +90,7 @@
                 <div class="position-relative h-100">
                     <img
                             class="position-absolute w-100 h-100"
-                            src="/img/about.png"
+                            th:src="@{/img/about.png}"
                             style="object-fit: cover"
                     />
                 </div>
@@ -139,7 +139,7 @@
                     <div class="col-sm-5">
                         <img
                                 class="img-fluid mb-3 mb-sm-0"
-                                src="/img/service-1.jpg"
+                                th:src="@{/img/service-1.jpg}"
                                 alt=""
                         />
                     </div>
@@ -160,7 +160,7 @@
                     <div class="col-sm-5">
                         <img
                                 class="img-fluid mb-3 mb-sm-0"
-                                src="/img/service-2.jpg"
+                                th:src="@{/img/service-2.jpg}"
                                 alt=""
                         />
                     </div>
@@ -181,7 +181,7 @@
                     <div class="col-sm-5">
                         <img
                                 class="img-fluid mb-3 mb-sm-0"
-                                src="/img/service-3.jpg"
+                                th:src="@{/img/service-3.jpg}"
                                 alt=""
                         />
                     </div>
@@ -202,7 +202,7 @@
                     <div class="col-sm-5">
                         <img
                                 class="img-fluid mb-3 mb-sm-0"
-                                src="/img/service-4.jpg"
+                                th:src="@{/img/service-4.jpg}"
                                 alt=""
                         />
                     </div>
@@ -271,7 +271,7 @@
                     <div class="col-4 col-sm-3">
                         <img
                                 class="w-100 rounded-circle mb-3 mb-sm-0"
-                                src="/img/menu-1.jpg"
+                                th:src="@{/img/menu-1.jpg}"
                                 alt=""
                         />
                         <h5 class="menu-price">$5</h5>
@@ -288,7 +288,7 @@
                     <div class="col-4 col-sm-3">
                         <img
                                 class="w-100 rounded-circle mb-3 mb-sm-0"
-                                src="/img/menu-2.jpg"
+                                th:src="@{/img/menu-2.jpg}"
                                 alt=""
                         />
                         <h5 class="menu-price">$7</h5>
@@ -305,7 +305,7 @@
                     <div class="col-4 col-sm-3">
                         <img
                                 class="w-100 rounded-circle mb-3 mb-sm-0"
-                                src="/img/menu-3.jpg"
+                                th:src="@{/img/menu-3.jpg}"
                                 alt=""
                         />
                         <h5 class="menu-price">$9</h5>
@@ -325,7 +325,7 @@
                     <div class="col-4 col-sm-3">
                         <img
                                 class="w-100 rounded-circle mb-3 mb-sm-0"
-                                src="/img/menu-1.jpg"
+                                th:src="@{/img/menu-1.jpg}"
                                 alt=""
                         />
                         <h5 class="menu-price">$5</h5>
@@ -342,7 +342,7 @@
                     <div class="col-4 col-sm-3">
                         <img
                                 class="w-100 rounded-circle mb-3 mb-sm-0"
-                                src="/img/menu-2.jpg"
+                                th:src="@{/img/menu-2.jpg}"
                                 alt=""
                         />
                         <h5 class="menu-price">$7</h5>
@@ -359,7 +359,7 @@
                     <div class="col-4 col-sm-3">
                         <img
                                 class="w-100 rounded-circle mb-3 mb-sm-0"
-                                src="/img/menu-3.jpg"
+                                th:src="@{/img/menu-3.jpg}"
                                 alt=""
                         />
                         <h5 class="menu-price">$9</h5>
@@ -394,7 +394,7 @@
         <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="/img/testimonial-1.jpg" alt=""/>
+                    <img class="img-fluid" th:src="@{/img/testimonial-1.jpg}" alt=""/>
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
@@ -407,7 +407,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="/img/testimonial-2.jpg" alt=""/>
+                    <img class="img-fluid" th:src="@{/img/testimonial-2.jpg}" alt=""/>
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
@@ -420,7 +420,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="/img/testimonial-3.jpg" alt=""/>
+                    <img class="img-fluid" th:src="@{/img/testimonial-3.jpg}" alt=""/>
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
@@ -433,7 +433,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="/img/testimonial-4.jpg" alt=""/>
+                    <img class="img-fluid" th:src="@{/img/testimonial-4.jpg}" alt=""/>
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
