--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -30,7 +30,7 @@
                 <h1 class="mb-5">Hot Coffee</h1>
                 <div class="row align-items-center mb-5">
                     <div class="col-4 col-sm-3">
-                        <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
+                        <img class="w-100 rounded-circle mb-3 mb-sm-0" th:src="@{img/menu-1.jpg}" alt="">
                         <h5 class="menu-price">$5</h5>
                     </div>
                     <div class="col-8 col-sm-9">
@@ -40,7 +40,7 @@
                 </div>
                 <div class="row align-items-center mb-5">
                     <div class="col-4 col-sm-3">
-                        <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-2.jpg" alt="">
+                        <img class="w-100 rounded-circle mb-3 mb-sm-0" th:src="@{img/menu-2.jpg}" alt="">
                         <h5 class="menu-price">$7</h5>
                     </div>
                     <div class="col-8 col-sm-9">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="row align-items-center mb-5">
                     <div class="col-4 col-sm-3">
-                        <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-3.jpg" alt="">
+                        <img class="w-100 rounded-circle mb-3 mb-sm-0" th:src="@{img/menu-3.jpg}" alt="">
                         <h5 class="menu-price">$9</h5>
                     </div>
                     <div class="col-8 col-sm-9">
@@ -63,7 +63,7 @@
                 <h1 class="mb-5">Cold Coffee</h1>
                 <div class="row align-items-center mb-5">
                     <div class="col-4 col-sm-3">
-                        <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
+                        <img class="w-100 rounded-circle mb-3 mb-sm-0" th:src="@{img/menu-1.jpg}" alt="">
                         <h5 class="menu-price">$5</h5>
                     </div>
                     <div class="col-8 col-sm-9">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="row align-items-center mb-5">
                     <div class="col-4 col-sm-3">
-                        <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-2.jpg" alt="">
+                        <img class="w-100 rounded-circle mb-3 mb-sm-0" th:src="@{img/menu-2.jpg}" alt="">
                         <h5 class="menu-price">$7</h5>
                     </div>
                     <div class="col-8 col-sm-9">
@@ -83,7 +83,7 @@
                 </div>
                 <div class="row align-items-center mb-5">
                     <div class="col-4 col-sm-3">
-                        <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-3.jpg" alt="">
+                        <img class="w-100 rounded-circle mb-3 mb-sm-0" th:src="@{img/menu-3.jpg}" alt="">
                         <h5 class="menu-price">$9</h5>
                     </div>
                     <div class="col-8 col-sm-9">
