--- a/src/main/resources/templates/service.html
+++ b/src/main/resources/templates/service.html
@@ -27,7 +27,7 @@
             <div class="col-lg-6 mb-5">
                 <div class="row align-items-center">
                     <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-1.jpg" alt="">
+                        <img class="img-fluid mb-3 mb-sm-0" th:src="@{img/service-1.jpg}" alt="">
                     </div>
                     <div class="col-sm-7">
                         <h4><i class="fa fa-truck service-icon"></i>Fastest Door Delivery</h4>
@@ -40,7 +40,7 @@
             <div class="col-lg-6 mb-5">
                 <div class="row align-items-center">
                     <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-2.jpg" alt="">
+                        <img class="img-fluid mb-3 mb-sm-0" th:src="@{img/service-2.jpg}" alt="">
                     </div>
                     <div class="col-sm-7">
                         <h4><i class="fa fa-coffee service-icon"></i>Fresh Coffee Beans</h4>
@@ -53,7 +53,7 @@
             <div class="col-lg-6 mb-5">
                 <div class="row align-items-center">
                     <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-3.jpg" alt="">
+                        <img class="img-fluid mb-3 mb-sm-0" th:src="@{img/service-3.jpg}" alt="">
                     </div>
                     <div class="col-sm-7">
                         <h4><i class="fa fa-award service-icon"></i>Best Quality Coffee</h4>
@@ -66,7 +66,7 @@
             <div class="col-lg-6 mb-5">
                 <div class="row align-items-center">
                     <div class="col-sm-5">
-                        <img class="img-fluid mb-3 mb-sm-0" src="img/service-4.jpg" alt="">
+                        <img class="img-fluid mb-3 mb-sm-0" th:src="@{img/service-4.jpg}" alt="">
                     </div>
                     <div class="col-sm-7">
                         <h4><i class="fa fa-table service-icon"></i>Online Table Booking</h4>
