--- a/src/main/resources/templates/testimonial.html
+++ b/src/main/resources/templates/testimonial.html
@@ -24,7 +24,7 @@
         <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="img/testimonial-1.jpg" alt="">
+                    <img class="img-fluid" th:src="@{img/testimonial-1.jpg}" alt="">
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
@@ -35,7 +35,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="img/testimonial-2.jpg" alt="">
+                    <img class="img-fluid" th:src="@{img/testimonial-2.jpg}" alt="">
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
@@ -46,7 +46,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="img/testimonial-3.jpg" alt="">
+                    <img class="img-fluid" th:src="@{img/testimonial-3.jpg}" alt="">
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
@@ -57,7 +57,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="d-flex align-items-center mb-3">
-                    <img class="img-fluid" src="img/testimonial-4.jpg" alt="">
+                    <img class="img-fluid" th:src="@{img/testimonial-4.jpg}" alt="">
                     <div class="ml-3">
                         <h4>Client Name</h4>
                         <i>Profession</i>
